--- a/tag_model.ipynb
+++ b/tag_model.ipynb
@@ -1157,7 +1157,7 @@
    ],
    "source": [
     "%%time\n",
-    "SEEDS = [10, 15]\n",
+    "SEEDS = [10]\n",
     "\n",
     "for j, SEED in enumerate(SEEDS):\n",
     "    set_all_seeds(SEED)\n",
@@ -1177,7 +1177,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "SEEDS = [2021, 2022]\n",
+    "SEEDS = [10]\n",
     "\n",
     "for j, SEED in enumerate(SEEDS):\n",
     "    set_all_seeds(SEED)\n",
