--- a/tag_model.ipynb
+++ b/tag_model.ipynb
@@ -441,6 +441,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tag_layer(x):\n",
+    "    x = BatchNormalization()(x)\n",
+    "    # x = GaussianNoise(noise)(x)\n",
+    "    x = Dense(128, activation=\"sigmoid\")(x)\n",
+    "    x = Dropout(0.8)(x)\n",
+    "    return x\n",
+    "\n",
+    "## v7\n",
+    "def create_model(input_dim,output_dim):\n",
+    "    inputs = Input(input_dim)\n",
+    "    inputs2 = tf.keras.backend.square(inputs)\n",
+    "    tags = []\n",
+    "    for f in feature_list:\n",
+    "        tags.append(tag_layer(tf.gather(inputs, tf.constant(f), axis=-1)))\n",
+    "    Tags = Concatenate()(tags)\n",
+    "    x = Concatenate(axis=-1)([inputs, inputs2, Tags])\n",
+    "\n",
+    "    x = BatchNormalization()(x)\n",
+    "    x = Dropout(0.85)(x)\n",
+    "    for i in range(3):\n",
+    "        x = Dense(300)(x)\n",
+    "        x = BatchNormalization()(x)\n",
+    "        x = Lambda(tf.keras.activations.swish)(x)\n",
+    "        x = Dropout(0.7)(x)\n",
+    "\n",
+    "    x = tf.keras.layers.Dense(output_dim)(x)\n",
+    "    out = tf.keras.layers.Activation(\"sigmoid\")(x)\n",
+    "\n",
+    "    model = Model(inputs=inputs,outputs=out)\n",
+    "    model.compile(\n",
+    "        optimizer=tfa.optimizers.RectifiedAdam(1e-3),\n",
+    "        loss=BinaryCrossentropy(label_smoothing=1e-3),\n",
+    "        # loss=\"mse\",\n",
+    "        metrics=tf.keras.metrics.AUC(name = 'auc')\n",
+    "        )\n",
+    "    return model\n",
+    "v = 7\n",
+    "try:\n",
+    "    os.mkdir(f\"models_v{v}\")\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "id": "BMQVZknKbg9s"
