--- a/tag_model.ipynb
+++ b/tag_model.ipynb
@@ -543,7 +543,8 @@
     "    model = create_model(X.shape[-1],len(resp_cols))\n",
     "    # X_train, X_test = X[train_indices], X[test_indices]\n",
     "    # y_train, y_test = y[train_indices], y[test_indices]\n",
-    "    history = model.fit(X[train_indices],y[train_indices],validation_data=(X[test_indices],y[test_indices]),epochs=500,batch_size=4096)"
+    "#     history = model.fit(X[train_indices],y[train_indices],validation_data=(X[test_indices],y[test_indices]),epochs=500,batch_size=4096)\n",
+    "    history = model.fit(X[train_indices],y[train_indices],validation_data=(X[test_indices],y[test_indices]),epochs=1500,batch_size=4096*4)"
    ]
   },
   {
