--- a/tag_model.ipynb
+++ b/tag_model.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "train = pd.read_csv('./train.csv')\n",
-    "# train = train.query('date > 85').reset_index(drop = True) \n",
+    "train = train.query('date > 85').reset_index(drop = True) \n",
     "train = train[train['weight'] != 0]\n",
     "\n",
     "train.fillna(train.mean(),inplace=True)\n",
